<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:maxlock="http://schemas.android.com/apk/res-auto"
    android:key="main">
    <PreferenceCategory xmlns:tools="http://schemas.android.com/tools"
        android:title="@string/pref_category_locking"
        tools:ignore="UnusedAttribute">
        <PreferenceScreen
            android:fragment="de.Maxr1998.xposed.maxlock.ui.settings.SettingsFragment$LockingTypeSettingsFragment"
            android:key="locking_type_settings"
            android:title="@string/pref_screen_locking_type" />
        <PreferenceScreen
            android:fragment="de.Maxr1998.xposed.maxlock.ui.settings.SettingsFragment$LockingUISettingsFragment"
            android:key="locking_ui_settings"
            android:title="@string/pref_screen_locking_ui" />
        <PreferenceScreen
            android:fragment="de.Maxr1998.xposed.maxlock.ui.settings.SettingsFragment$LockingOptionsFragment"
            android:key="locking_options"
            android:title="@string/pref_screen_locking_options" />
        <PreferenceScreen
            android:fragment="de.Maxr1998.xposed.maxlock.ui.settings.SettingsFragment$LockingIntikaFragment"
            android:key="intika_imod"
            android:title="@string/pref_screen_locking_intika" />
    </PreferenceCategory>
    <de.Maxr1998.xposed.maxlock.preference.SpacerPreference />
    <PreferenceCategory android:title="@string/pref_category_apps">
        <Preference
            android:key="choose_apps"
            android:summary="@string/pref_choose_apps_summary"
            android:title="@string/pref_choose_apps" />
    </PreferenceCategory>
    <de.Maxr1998.xposed.maxlock.preference.SpacerPreference />
    <PreferenceCategory android:title="@string/pref_category_ui">
        <SwitchPreference
            android:defaultValue="false"
            android:key="hide_from_launcher"
            android:title="@string/pref_hide_from_launcher" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="use_dark_style"
            android:title="@string/pref_use_dark_style" />
        <!--suppress AndroidUnknownAttribute -->
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            alphaSlider="true"
            android:defaultValue="@android:color/white"
            android:key="widget_background_color"
            android:title="@string/pref_widget_background_color" />
    </PreferenceCategory>
    <de.Maxr1998.xposed.maxlock.preference.SpacerPreference />
    <PreferenceCategory android:title="@string/pref_category_about">
        <Preference
            android:key="about"
            android:summary="@string/pref_about_summary"
            android:title="@string/app_name" />
        <Preference
            android:key="donate_upgrade_pro"
            android:title="@string/pref_donate_upgrade_pro" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_pro"
            android:summary="@string/pref_enable_pro_summary"
            android:title="@string/pref_enable_pro" />
        <Preference
            android:key="uninstall"
            android:summary="@string/pref_prevent_uninstall_summary"
            android:title="@string/pref_prevent_uninstall" />
    </PreferenceCategory>
    <de.Maxr1998.xposed.maxlock.preference.SpacerPreference maxlock:topShadow="false" />
</PreferenceScreen>