<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/tasker_config_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/action_configuration"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/tasker_config_options"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radio_toggle_ms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/action_toggle_ms" />

            <RadioButton
                android:id="@+id/radio_ms_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/action_ms_on" />

            <RadioButton
                android:id="@+id/radio_ms_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/action_ms_off" />

            <RadioButton
                android:id="@+id/radio_imod_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_imod_reset" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/tasker_imod_reset_summary"
                android:textSize="12sp" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/tasker_apply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/tasker_button_apply" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tasker_warning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/tasker_integration_disabled"
            android:textSize="22sp" />
    </RelativeLayout>
</LinearLayout>