<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/first_start_page3"
    android:orientation="vertical"
    tools:context="de.Maxr1998.xposed.maxlock.ui.firstStart.fragments.FragmentAppSetup">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/first_start_top_margin"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/white"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UselessParent">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/first_start_app_package"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fs_app_package_installer"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/first_start_app_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fs_app_settings"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/first_start_app_xposed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fs_app_xposed_installer"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/first_start_app_device_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_prevent_uninstall"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/first_start_title"
        style="@style/AppTheme.FirstStart.TitleText"
        android:layout_weight="1"
        android:text="@string/fs_recommended_apps" />

    <TextView
        style="@style/AppTheme.FirstStart.SubtitleText"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.5"
        android:text="@string/fs_recommended_apps_summary" />
</LinearLayout>