<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <de.Maxr1998.xposed.maxlock.ui.firstStart.views.ConfigView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/white"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="UselessParent">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/first_start_app_package"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fs_app_package_installer"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/first_start_app_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fs_app_settings"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/first_start_app_xposed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fs_app_xposed_installer"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/first_start_app_device_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_prevent_uninstall"
                android:textSize="18sp" />
        </LinearLayout>
    </de.Maxr1998.xposed.maxlock.ui.firstStart.views.ConfigView>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/mi_pager_margin_bottom" />
</merge>